2006-08-01 SHIBATA Hiroshi <h-sbt@nifty.com>
	* title_tag.rb: hide title in invisible diary.

2006-07-23 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: delete control codes without "\n", "\r" and "\t".
	thanks KURODA Hiraku  <hiraku at hinet.mydns.jp>.

2006-07-02 TADA Tadashi <sho@spc.gr.jp>
	* tb-show.rb: change ID of preference page 'TrackBack' -> 'tb-show'.

2006-06-18 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: MakeRssFull#writable? check more when file dose not exist.

2006-06-18 SHIBATA Hiroshi <h-sbt@nifty.com>
	* makerss.rb: change value of Auto-Discovery title element.

2006-06-18 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: enable to make another feed without TSUKKOMI.
	* makerss.rb: obsolete makerss.hidecomment option.

2006-05-05 SHIBATA Hiroshi <h-sbt@nifty.com>
	* tb-show.rb: bugfix count up in trackbacks_of_today_short.

2006-04-15 TADA Tadashi <sho@spc.gr.jp>
	* release 2.1.4.

2006-03-28 SHIBATA Hiroshi <h-sbt@nifty.com>
	* recent_comment3.rb: fix order of TSUKKOMI in normal view mode.
	* recent_trackback3.rb: fix order of Trackback in normal view mode.

2006-03-23 TADA Tadashi <sho@spc.gr.jp>
	* {ja,en,zh}/makerss.rb: correct TSUKKOMI number into <title> when it over
	100. thanks Namamura.

2006-03-18 TADA Tadashi <sho@spc.gr.jp>
	* recent_rss.rb: fix some typo. thanks kou-san.
	* comment_rank.rb, makerss.rb, recent_comment3.rb, recent_trackback3.rb,
	tb-show.rb: remove a limit of TSUKKOMI count.
	* makerss.rb: support Mobile Link Discovery.

2006-03-18 KURODA Hiraku  <hiraku at hinet.mydns.jp>
	* ja/disp_referrer.rb: support new Google cache.

2006-03-17 TADA Tadashi <sho@spc.gr.jp>
	* recent_rss.rb: replace 'rss_recent' to 'recent-rss' in class name in HTML.

2006-03-14 TADA Tadashi <sho@spc.gr.jp>
	* recent_rss.rb: replace 'rss_recent' to 'recent_rss' in all sources.
	* ja/disp_referrer.rb: remove 'my.yahoo' and 'blog.yahoo' from search engines.

2006-03-13 TADA Tadashi <sho@spc.gr.jp>
	* rename {ja,en,zh}rss-recent.rb to recent_rss.rb.
